--- a/css/output.css
+++ b/css/output.css
@@ -2,7 +2,7 @@
     top: 0;
     left: 0;
     display: block;
-    overflow: hidden;
+    overflow-wrap: break-word;
     box-sizing: border-box;
     padding: 5px 15px;
     width: 100%;
